<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_secret"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="15sp"/>
    <TableRow
        android:id="@+id/secret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
<!--        <Button-->
<!--            android:id="@+id/secret1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/grey"/>-->
<!--        <Button-->
<!--            android:id="@+id/secret2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/grey"/>-->
<!--        <Button-->
<!--            android:id="@+id/secret3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/grey"/>-->
<!--        <Button-->
<!--            android:id="@+id/secret4"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/grey"/>-->
    </TableRow>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_adversaire"
        android:layout_marginTop="30dp"
        android:textSize="15sp"/>
    <TableRow
        android:id="@+id/saisie_adversaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
<!--        <Button-->
<!--            android:id="@+id/couleur1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/grey"/>-->
<!--        <Button-->
<!--            android:id="@+id/couleur2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/grey"/>-->
<!--        <Button-->
<!--            android:id="@+id/couleur3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/grey"/>-->
<!--        <Button-->
<!--            android:id="@+id/couleur4"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/grey"/>-->
    </TableRow>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/votre_reponse"
        android:layout_marginTop="30dp"
        android:textSize="15sp"/>
    <TableRow
        android:id="@+id/saisie_joueur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
<!--        <Button-->
<!--            android:id="@+id/reponse1"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:backgroundTint="@color/grey"/>-->
<!--        <Button-->
<!--            android:id="@+id/reponse2"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:backgroundTint="@color/grey"/>-->
<!--        <Button-->
<!--            android:id="@+id/reponse3"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:backgroundTint="@color/grey"/>-->
<!--        <Button-->
<!--            android:id="@+id/reponse4"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:backgroundTint="@color/grey"/>-->
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/msg_rond"
            android:gravity="center"
            android:layout_span="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/msg_rond"
            android:gravity="center"
            android:layout_span="2"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TableRow
            android:layout_span="2"
            android:gravity="center">
            <ImageButton
                android:id="@+id/croix"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:background="@drawable/traverser"/>
        </TableRow>
        <TableRow
            android:layout_span="2"
            android:gravity="center">
            <ImageButton
                android:id="@+id/rond"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="@drawable/vide"/>
        </TableRow>
    </TableRow>
    <TableRow
        android:gravity="center">
        <Button
            android:id="@+id/valider"
            android:text="@string/valider"
            android:layout_span="2"/>
    </TableRow>
</TableLayout>