<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_local"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/local_title"/>
    <TableRow
        android:id="@+id/saisie_utilisateur"
        android:layout_width="match_parent"
        android:gravity="center">

<!--        <Button-->
<!--            android:id="@+id/color1"-->
<!--            style="@style/button_affichage"/>-->
<!--        <Button-->
<!--            android:id="@+id/color2"-->
<!--            style="@style/button_affichage" />-->
<!--        <Button-->
<!--            android:id="@+id/color3"-->
<!--            style="@style/button_affichage" />-->
<!--        <Button-->
<!--            android:id="@+id/color4"-->
<!--            style="@style/button_affichage" />-->
    </TableRow>
    <TableRow
        android:id="@+id/saisie_utilisateur2"
        android:layout_width="match_parent"
        android:gravity="center">
<!--        <Button-->
<!--            android:id="@+id/color5"-->
<!--            style="@style/button_saisie" />-->
<!--        <Button-->
<!--            android:id="@+id/color6"-->
<!--            style="@style/button_saisie" />-->
    </TableRow>
    <ListView
        android:id="@+id/list_reponse"
        android:layout_height="650dp"
        android:gravity="center"/>
    <TableRow
        android:layout_width="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/yellow_button"
            android:background="@color/yellow"
            android:backgroundTint="@color/yellow"
            style="@style/button_saisie"/>
        <Button
            android:id="@+id/blue_button"
            android:background="@color/blue"
            android:backgroundTint="@color/blue"
            style="@style/button_saisie"/>
        <Button
            android:id="@+id/red_button"
            android:background="@color/red"
            android:backgroundTint="@color/red"
            style="@style/button_saisie"/>
        <Button
            android:id="@+id/green_button"
            android:background="@color/green"
            android:backgroundTint="@color/green"
            style="@style/button_saisie"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/back_button"
            android:text="@string/retour"
            style="@style/button_saisie"
            android:backgroundTint="@color/grey"/>
        <Button
            android:id="@+id/white_button"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            style="@style/button_saisie"/>
        <Button
            android:id="@+id/black_button"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            style="@style/button_saisie"/>
        <Button
            android:id="@+id/validate_button"
            android:text="@string/valider"
            style="@style/button_saisie"
            android:backgroundTint="@color/grey"/>
    </TableRow>
</TableLayout>